--- a/WEB/src/app/home/content-mgmnt/topics/ppt-dialog.html
+++ b/WEB/src/app/home/content-mgmnt/topics/ppt-dialog.html
@@ -1,11 +1,9 @@
 <button type="button" style="color:#fff" class="close" (click)="onNoClick()">&times;</button>
 <h5 style="background: #ED683D;
 color: #fff;
-text-align: center;">{{topic.displayName}}</h5>
-
- <iframe style="width:100%; display: block;" ngx-document [src]="fileURL" provider="google"></iframe>
-
- <!-- <object width="400" height="400" data="{{fileURL}}"  type="application/vnd.openxmlformats-officedocument.presentationml.presentation"></object> -->
-
- <!-- <ngx-extended-pdf-viewer [src]="fileURL" useBrowserLocale="false" [delayFirstView]="1000"
-  [showHandToolButton]="true" [handTool]=true> </ngx-extended-pdf-viewer> -->
+text-align: center;"  *ngIf="type ==='TOPIC'" >{{topic.displayName}}</h5>
+<h5 style="background: #ED683D;
+color: #fff;
+text-align: center;"  *ngIf="type ==='SAMPLE' || type=== 'BEXAM'" >{{question.option1}}</h5>
+   
+<iframe style="width:100%; height:100%;display: block;" ngx-document [src]="fileURL"></iframe>
