--- a/WEB/src/app/home/home.component.html
+++ b/WEB/src/app/home/home.component.html
@@ -29,7 +29,7 @@
                     </button>
                     <button mat-menu-item (click)="viewSessionReport()">
                         <i class="fa fa-calendar drop-icon" aria-hidden="true"></i>
-                        <span>View Favorites</span>
+                        <span>My Favorites</span>
                     </button>
                     <button mat-menu-item (click)="logout()">
                         <i class="fa fa-sign-out drop-icon" aria-hidden="true"></i>
