changes for school

--- a/WEB/src/app/home/content-mgmnt/content-mgmnt.component.html
+++ b/WEB/src/app/home/content-mgmnt/content-mgmnt.component.html
@@ -144,7 +144,7 @@
                         <p class="no-margin">Animation</p>
                       </div>
                       <div class="box" *ngIf="'PPT' == fav?.topicDetails?.contentType">
-                        <p class="no-margin">Teacher Slide</p>
+                        <p class="no-margin">Teaching Slide</p>
                       </div>
                       <div class="box" *ngIf="'PDF' == fav?.topicDetails?.contentType">
                         <p class="no-margin">E-BOOK</p>
